--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <link rel="preconnect"
           href="https://fonts.gstatic.com"
           crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap"
           rel="stylesheet">
     <title>React App</title>
   </head>
